# HanmoleTeleperation-Quest

./: .gitignore  AGENTS.md  AV1_DECODE_FIX.md  VIDEO_ANALYSIS.md  VIDEO_ANALYSIS_SUMMARY.md  VIDEO_EXECUTION_MATRIX.md  add_logs.patch  ignore.conf
Assets/: InputSystem_Actions.inputactions  Plugins.rar  Scripts.rar  VoiceInput.asset  link.xml
Assets/Audio/: MainMixer.mixer
Assets/Editor/: FixMaterialKeywords.cs  ImprovedMaterialFixer.cs  OpenPersistentDataPathEditor.cs  PluginPlatformFixer.cs  SetAllArticulationImmovable.cs
Assets/Fonts/: MSYH SDF.asset
Assets/HandPose/: ClenchFist.asset
Assets/Material/: New Universal Render Pipeline Asset.asset  RLSliderMat.mat  RoundMat.mat  Test.mat  UI_JoystickBreathNoise.mat  UI_RoundedRectWithBorder_UIFixed22.mat  UI_SBSRawImage.mat  Unlit_Multiview Stereo.mat  VHSliderMat.mat
Assets/Materials/: Default.mat  front_laser_color.mat  imu_link_color.mat  rear_laser_color.mat
Assets/Oculus/: OculusProjectConfig.asset  OculusProjectSetupSettings.asset
Assets/Prefab/: Canvas.prefab  Hanmole-V1.prefab  Hanmole-V2.prefab  hanmolev0_1.prefab
Assets/Resources/: BlitMtrl.mat  HUD_RT.renderTexture  InputActions.asset  OVROverlayCanvasSettings.asset  OculusRuntimeSettings.asset  QuestSideBySideBlend.mat  RedMtrl.mat  ServerConfig.asset  Sphere.prefab  Video.renderTexture  WhiteMtrl.mat
Assets/Scenes/: AndroidMain--0314.unity  AndroidMain-0203bak.unity  AndroidMain-1205bak.unity  AndroidMain.unity  Main.unity  QuestMain-0313BAK.unity
Assets/Scripts/: AppLog.cs  DataManager.cs  DebugTextManager.cs  DeviceIdUtil.cs  ProceduralSphere_FBXStyle.cs  QuestCodecProbe.cs  UIManager.cs
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Assets/Shaders/: AV1ExternalTex.shader  AV1Yuv2Rgb.shader  GradientImage.shader  GradientImage_Horizontal.shader  Multiview Stereo Masked.shader  Plane.mat  PlaneVideo.mat  PlaneWrapFromNorthPole_ObjectSpace.shader  QuestVideoColorMatrix.shader  RoundedRectWithBorder.shader  UI_JoystickNoise.shader  Yuv420ToRgb.shader
Assets/StreamingAssets/: server_config.json
Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
Assets/_Recovery/: 0 (100).unity  0 (101).unity  0 (102).unity  0 (12).unity  0 (97).unity  0 (99).unity
Assets/_Scripts/: DemoOnly.cs
Assets/send/: gstreamer_encoder.cc  main_gstreamer.cc  sender.cc
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  HybridCLRSettings.asset  ProjectSettings.asset  TagManager.asset  wit.config
VulkanExternalTexture/: VulkanExternalTexturePrototype.cs  build_questvulkanext.bat
VulkanExternalTexture/cpp/: CMakeLists.txt  VulkanExternalTexture.cpp  VulkanExternalTexture.cpp.bak  build.gradle
VulkanExternalTexture/cpp/shaders/: ycbcr_fullscreen.frag  ycbcr_fullscreen.frag.spv  ycbcr_fullscreen.vert  ycbcr_fullscreen_frag_spv.h  ycbcr_fullscreen_vert_spv.h
tools/: convert_av1_to_release_packets.py
(+1485 files in other folders)
